--- a/client/src/app/static/header/header.component.html
+++ b/client/src/app/static/header/header.component.html
@@ -1,5 +1,5 @@
-<header>
-  <div class="container mx-auto">
-    header
+<header class="header">
+  <div class="container mx-auto py-5">
+    <app-logo></app-logo>
   </div>
 </header>
