--- a/client/src/app/static/header/header.component.html
+++ b/client/src/app/static/header/header.component.html
@@ -1,5 +1,6 @@
 <header class="header">
-  <div class="container mx-auto py-5">
+  <div class="container mx-auto py-5 flex gap-11 items-center">
     <app-logo></app-logo>
+    <app-main-nav></app-main-nav>
   </div>
 </header>
