Add the active state to the main nav

--- a/client/src/app/static/main-nav/main-nav.component.scss
+++ b/client/src/app/static/main-nav/main-nav.component.scss
@@ -14,4 +14,8 @@
   &:active {
     background-color: var(--active-background-color);
   }
+
+  &.active {
+    background-color: var(--hover-background-color);
+  }
 }
