Add the route loader

--- a/client/src/assets/styles/_globals.scss
+++ b/client/src/assets/styles/_globals.scss
@@ -13,6 +13,7 @@
   --border-radius: #{$borderRadius};
   --hover-background-color: #{$lightHoverBgColor};
   --active-background-color: #{$lightActiveBgColor};
+  --animation-speed: #{$animationSpeed};
 }
 
 @media (prefers-color-scheme: dark) {
