Add the page title component

--- a/client/src/app/modules/blog/blog.component.html
+++ b/client/src/app/modules/blog/blog.component.html
@@ -1,5 +1,5 @@
 <main class="container mx-auto header-gap">
-  Blog
+  <app-page-title>Blog</app-page-title>
 
   <div>
     @for (post of posts; track post.id) {
