Fetching the blog posts from Directus now mostly works

--- a/client/src/app/modules/blog/blog.component.html
+++ b/client/src/app/modules/blog/blog.component.html
@@ -3,7 +3,7 @@
 
   <div>
     @for (post of posts; track post.id) {
-      <div>{{ post.title.rendered }}</div>
+      <div>{{ post.title }}</div>
     }
   </div>
 </main>
