--- a/client/src/app/shared/components/content-tile-horizontal/content-tile-horizontal.component.html
+++ b/client/src/app/shared/components/content-tile-horizontal/content-tile-horizontal.component.html
@@ -1,5 +1,5 @@
 @if (content) {
-  <div>
+  <div class="my-10">
     @if (content.image) {
       <img [src]="content.image" alt="{{ content.title }}" />
     }
