Make the content tiles responsive

--- a/client/src/app/shared/components/content-tile-horizontal/content-tile-horizontal.component.html
+++ b/client/src/app/shared/components/content-tile-horizontal/content-tile-horizontal.component.html
@@ -1,5 +1,5 @@
 @if (content) {
-  <div class="my-12 flex gap-8">
+  <div class="my-12 px-5 sm:px-0 flex flex-col sm:flex-row gap-8">
     <div class="image">
       <a [routerLink]="[content.link]">
         @if (content.image) {
