--- a/client/src/app/static/header/header.component.html
+++ b/client/src/app/static/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header px-3 sm:px-0">
   <div class="container mx-auto py-5 flex gap-11 items-center">
     <app-logo></app-logo>
     <app-main-nav></app-main-nav>
