Add the material fonts and content tile image placeholder component

--- a/client/src/app/shared/components/content-tile-horizontal/content-tile-horizontal.component.html
+++ b/client/src/app/shared/components/content-tile-horizontal/content-tile-horizontal.component.html
@@ -6,7 +6,7 @@
           <img [src]="content.image" alt="{{ content.title }}" class="content-tile-image">
         }
         @else {
-          <div>Image placeholder</div>
+          <app-content-tile-image-placeholder></app-content-tile-image-placeholder>
         }
       </a>
     </div>
