Add the mobile menu icon

--- a/client/src/app/static/header/header.component.html
+++ b/client/src/app/static/header/header.component.html
@@ -1,6 +1,7 @@
 <header class="header px-3 sm:px-0">
-  <div class="container mx-auto py-5 flex gap-11 items-center">
+  <div class="container mx-auto py-5 flex gap-5 md:gap-11 items-center">
+    <app-mobile-menu-button class="md:hidden"></app-mobile-menu-button>
     <app-logo></app-logo>
-    <app-main-nav></app-main-nav>
+    <app-main-nav class="hidden md:block"></app-main-nav>
   </div>
 </header>
