The mobile menu now works

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-route-loader></app-route-loader>
-
 <app-header></app-header>
+<app-mobile-menu class="md:hidden"></app-mobile-menu>
 
 <router-outlet><router-outlet />
