--- a/client/src/app/static/header/header.component.scss
+++ b/client/src/app/static/header/header.component.scss
@@ -1,3 +1,6 @@
+@import "../../../assets/styles/variables";
+
 .header {
   border-bottom: 1px solid var(--border-color);
+  height: $toolbarHeight;
 }
