--- a/src/app/modules/blog/subpages/blog-post/blog-post.component.html
+++ b/src/app/modules/blog/subpages/blog-post/blog-post.component.html
@@ -3,17 +3,18 @@
 }
 @else {
   <main class="container mx-auto header-gap">
-    <app-page-title>{{ post.title }}</app-page-title>
+    <app-page-title>{{ post.metaData.title }}</app-page-title>
 
-    @if (post.titleImage) {
+    @if (post.metaData.titleImage) {
       <img
         class="w-full h-96 object-cover object-center rounded-lg"
-        [src]="post.titleImage"
-        [alt]="post.title"
+        [src]="post.metaData.titleImage"
+        [alt]="post.metaData.title"
       />
     }
 
     <div class="mt-4">
+      <markdown [data]="post.body"></markdown>
     </div>
   </main>
 }
