--- a/src/app/static/footer/footer.component.html
+++ b/src/app/static/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer py-12">
-  <div class="container mx-auto flex flex-col xl:flex-row xl:justify-between xl:items-center gap-4 px-5 xl:px-0">
+  <div class="container mx-auto flex flex-col xl:flex-row xl:justify-between xl:items-center gap-4 px-5 md:px-0">
     <app-logo></app-logo>
 
     <div class="flex flex-col md:flex-row gap-2 md:gap-4">
